--- a/kernel/.config
+++ b/kernel/.config
@@ -120,8 +120,8 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_MM_OWNER=y
-CONFIG_SYSFS_DEPRECATED=y
-CONFIG_SYSFS_DEPRECATED_V2=y
+#CONFIG_SYSFS_DEPRECATED=y
+#CONFIG_SYSFS_DEPRECATED_V2=y
 CONFIG_RELAY=y
 CONFIG_NAMESPACES=y
 CONFIG_UTS_NS=y
@@ -753,7 +753,7 @@ CONFIG_NETFILTER_XT_MATCH_OSF=m
 CONFIG_IP_VS=m
 CONFIG_IP_VS_IPV6=y
 # CONFIG_IP_VS_DEBUG is not set
-CONFIG_IP_VS_TAB_BITS=22
+CONFIG_IP_VS_TAB_BITS=23
 
 #
 # IPVS transport protocol load balancing support
@@ -1000,7 +1000,7 @@ CONFIG_NET_DROP_MONITOR=y
 # CONFIG_BT is not set
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
-CONFIG_WIRELESS=y
+CONFIG_WIRELESS=n
 CONFIG_CFG80211=m
 # CONFIG_NL80211_TESTMODE is not set
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
@@ -1252,7 +1252,7 @@ CONFIG_HAVE_IDE=y
 # SCSI device support
 #
 CONFIG_RAID_ATTRS=m
-CONFIG_SCSI=y
+CONFIG_SCSI=n
 CONFIG_SCSI_DMA=y
 CONFIG_SCSI_TGT=m
 CONFIG_SCSI_NETLINK=y
